<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/movie"
        android:title="@string/movies" />

    <item
        android:id="@+id/navigation_tvShow"
        android:icon="@drawable/tvshow"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/favorite" />


</menu>