package com.example.moviecatalogue.main

import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.swipeLeft
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.rule.ActivityTestRule
import com.example.moviecatalogue.R
import com.example.moviecatalogue.utils.EspressoIdlingResource
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test


class MovieCatalogueTest {
    @Rule
    @JvmField
    val activityTestRule =
        ActivityTestRule(MainActivity::class.java)

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.idlingresource)
    }

    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.idlingresource)
    }

    @Test
    fun clickListMovie() {
        onView(withId(R.id.moviesRecyclerView)).check(matches(isDisplayed()))
        onView(withId(R.id.moviesRecyclerView)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detail_film_name)).check(matches(isDisplayed()))
    }

    @Test
    fun clickListTvShow() {
        onView(withId(R.id.navigation_tvShow)).perform(click())
        onView(withId(R.id.tvShowRecyclerView)).check(matches(isDisplayed()))
        onView(withId(R.id.tvShowRecyclerView)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detail_TvShow_name)).check(matches(isDisplayed()))
    }

    @Test
    fun clickListFavoriteMovies() {
        onView(withId(R.id.navigation_favorite)).perform(click())
        onView(withId(R.id.moviesFavoriteRecyclerView)).check(matches(isDisplayed()))
        onView(withId(R.id.moviesFavoriteRecyclerView)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detail_film_name)).check(matches(isDisplayed()))
    }

    @Test
    fun clickListFavoriteTvShow() {
        onView(withId(R.id.navigation_favorite)).perform(click())
        onView(withId(R.id.tabs_main_favorite)).perform(swipeLeft())
        onView(withId(R.id.tvShowFavoriteRecyclerView)).check(matches(isDisplayed()))
        onView(withId(R.id.tvShowFavoriteRecyclerView)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detail_TvShow_name)).check(matches(isDisplayed()))
    }
}